# blokboi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  blokboi  build.sh  cmake_install.cmake  environment.yml  main.py  requirements.txt  run_tests.py  setup.py
.github/workflows/: black_py_formatter.yml  clang_formatter.yml  pre-commit.yml
data/: demo_scene.json  map1.txt
data/mechanical/objectives/: objective_00000.json  objective_00001.json  objective_00002.json  objective_00003.json  objective_00004.json  objective_00005.json  objective_00006.json  objective_00007.json  objective_00008.json  objective_00009.json  objective_00010.json  objective_00011.json  objective_00012.json  objective_00013.json  objective_00014.json  objective_00015.json  objective_00016.json
data/mechanical/scenes/: scene_00000.npy  scene_00001.npy  scene_00002.npy  scene_00005.npy  scene_00010.npy  scene_00012.npy  scene_00016.npy
data/toy/: scenes.json  scenes.npy
data/toy/objectives/: objective_00000.json  objective_00001.json  objective_00002.json  objective_00003.json  objective_00004.json  objective_00005.json  objective_00006.json  objective_00007.json  objective_00008.json  objective_00009.json  objective_00010.json  objective_00011.json  objective_00012.json
data/toy/scenes/: scene_00000.npy  scene_00001.npy  scene_00008.npy  scene_00011.npy
img/: demo_instructions.txt
lib/: _block.py.bkp  block.cpp  block.h  cgame.cpp  cgame.pxd  cgame.pyx  cgame.pyx.bkp  cgame_object.cpp  game.cpp  game.h  game.pxd  game_manager.cpp  game_manager.h  game_object.h  game_object.py  generators.cpp  manual.sh  player.cpp  player.h  player_controller.cpp  player_controller.h  player_controller.pxd  pycolors.py  scene.cpp  scene.h
results/: heuristics.csv  reinforcement.npy  rl.csv
src/: CMakeLists.txt  Makefile  _CMakeLists.txt  block.cpp  block.h  blokboi  blokboi_env.py  cmake_install.cmake  commands.py  game.cpp  game.h  game_manager.h  game_object.h  gui.py  heuristic.py  image_gen.py  location.cpp  location.h  logger.cpp  logger.py  main.py  map.cpp  map.h  map_loader.py  player.cpp  player.h  player_controller.h  pycolors.py  reinforcement.py  scene.cpp  scene.h  world.cpp  world.h
tests/: commands_test.py  test_commands.py
util/: demo_map.py  flip_boi.py  gen_ex_maps.py  resize_assets.py  score_heuristic.py
